# orthogram

./: .gitignore  .mailmap  README.rst  pyproject.toml  readthedocs.yaml  requirements.txt
cases/connections/: arrow_expand.yaml  arrow_overlap.yaml  arrow_styles.inc  end_labels.yaml  label_defaults.yaml  label_overlap.yaml  label_styles.inc  middle_label.yaml  rule_order-1.yaml  rule_order-2.yaml  rule_order.inc  styles.inc
cases/diagram/include/: row_top.csv
cases/interactions/: ddll.yaml  ddlu.yaml  ddru.yaml  dlld.yaml  dlll.yaml  dlul.yaml  drdl.yaml  drld.yaml  drll.yaml  drrr.yaml  drur.yaml  druu.yaml  lddd.yaml  lddr.yaml  ldld.yaml  ldll.yaml  ldrd.yaml  ldul.yaml  lldd.yaml  lldr.yaml  llld.yaml  llll.yaml  lllu.yaml  llrd.yaml  llur.yaml  ludl.yaml  luld.yaml  lull.yaml  lulu.yaml  lurd.yaml  luru.yaml  luul.yaml  rdlu.yaml  rdrd.yaml  rdrr.yaml  rdru.yaml  rdul.yaml  rrdr.yaml  rrrr.yaml  rrru.yaml  (+20 more)
cases/other/: arrows.yaml  block_labels.yaml  connection_labels.yaml  diagram_label.yaml  empty.yaml  include.yaml
cases/other/include/: check.yaml  row_top.csv
cases/png/: README.txt
cases/yaml/: dddd.yaml  dddl.yaml  dddr.yaml  ddld.yaml  ddll.yaml  ddlu.yaml  ddrd.yaml  ddrr.yaml  ddru.yaml  ddul.yaml  ddur.yaml  dduu.yaml  dldd.yaml  dldl.yaml  dldr.yaml  dlld.yaml  dlll.yaml  dllu.yaml  dlrd.yaml  dlrr.yaml  dlru.yaml  dlul.yaml  dlur.yaml  dluu.yaml  drdd.yaml  drdl.yaml  drdr.yaml  drld.yaml  drll.yaml  drlu.yaml  drrd.yaml  drrr.yaml  drru.yaml  drul.yaml  drur.yaml  druu.yaml  lddd.yaml  lddl.yaml  lddr.yaml  ldld.yaml  (+104 more)
docs/: acknowledge.rst  api.rst  attribute_ref.csv  attributes.rst  cmd.rst  conf.py  ddf.rst  gallery.rst  hello.rst  index.rst  install.rst  release.rst
examples/: colors.yaml  comparch.yaml  hello.yaml  powerplant.yaml  showoff.yaml
examples/include/: row_middle  styles.yaml
guix/: orthogram-devel.scm  orthogram.scm
orthogram/: __init__.py  __main__.py  attributes.py  build.py  debug.py  diagram.py  draw.py  functions.py  geometry.py  layout.py  refine.py  route.py  util.py
orthogram/arrange/: __init__.py  label.py  layout.py  net.py  refine.py  route.py
orthogram/define/: __init__.py  attributes.py  build.py  defs.py  diagram.py  load.py
orthogram/draw/: __init__.py  bands.py  blocks.py  boxes.py  connections.py  containers.py  drawing.py  functions.py  grid.py  labels.py  names.py  shapes.py
scripts/: build_docs  check  convert_readme  translate_cases  translate_examples
