[tool.poetry]
name = "orthogram"
version = "0.6.0"
description = "Draw block diagrams."
license = "GPL-3.0-or-later"
authors = ["Georgios Athanasiou <yorgath@gmail.com>"]
maintainers = ["Georgios Athanasiou <yorgath@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/yorgath/orthogram"
documentation = "https://readthedocs.org/projects/orthogram/"
keywords = ["block", "diagram", "graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.4.1"
Shapely = "^1.7.1"
cassowary = "^0.5.2"
networkx = "^2.6.2"
pycairo = "^1.20.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
Sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"
types-PyYAML = "^5.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
