[tool.poetry]
name = "orthogram"
version = "0.7.2"
description = "Draw block diagrams."
license = "GPL-3.0-or-later"
authors = ["Georgios Athanasiou <yorgath@gmail.com>"]
maintainers = ["Georgios Athanasiou <yorgath@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/yorgath/orthogram"
documentation = "https://readthedocs.org/projects/orthogram/"
keywords = ["block", "diagram", "graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
Shapely = "^1.8.2"
cassowary = "^0.5.2"
networkx = "^2.8.4"
pycairo = "^1.21.0"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
types-PyYAML = "^6.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
