[tool.poetry]
name = "orthogram"
version = "0.8.2"
description = "Draw block diagrams."
license = "GPL-3.0-or-later"
authors = ["Georgios Athanasiou <yorgath@gmail.com>"]
maintainers = ["Georgios Athanasiou <yorgath@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/yorgath/orthogram"
documentation = "https://readthedocs.org/projects/orthogram/"
keywords = ["block", "diagram", "graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
# Tested with Shapely 2.0.1, works OK.
Shapely = ">=1.8.2,<3"
cassowary = "^0.5.2"
networkx = "^2.8.4"
# Generic Context in pycairo 1.22 causes typing errors.
pycairo = "==1.21.0"

[tool.poetry.dev-dependencies]
mypy = ">=0.961,<2"
Sphinx = ">=5.1.1,<6"
sphinx-rtd-theme = ">=1,<2"
types-PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
